# rust-backend-template

./: .env.example  Cargo.toml  README.md  justfile
src/: error.rs  lib.rs  main.rs  telemetry.rs  test_methods.rs
src/adapters/: mod.rs
src/adapters/http/: claim.rs  dto.rs  handlers.rs  mod.rs  routing.rs
src/adapters/repository/: in_memory.rs
src/application/: mod.rs  user_service.rs
src/config/: mod.rs
src/domain/: errors.rs  mod.rs  ports.rs  user.rs
