[package]
name = "rust-backend-template"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "=0.8.4", features = ["tokio", "http1"] }
tokio = { version = "=1.47.1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.143"
uuid = { version = "=1.18.0", features = ["v4", "serde"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
tower-http = { version = "=0.5.2", features = ["trace", "cors"] }
thiserror = "=1.0.69"
async-trait = "=0.1.89"
